objects/Activity.object
<CustomObject>
    <fields>
        <fullName>AssignedDate__c</fullName>
        <description>Date a task was assigned. Populated via workflow.</description>
        <label>Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CompletedDate__c</fullName>
        <description>Date a task was completed. Populated via workflow.</description>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confidential__c</fullName>
        <description>Hidden field except to CAM and RVPs</description>
        <label>Confidential</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DB_Activity_Type__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>IF(CONTAINS( Subject , &quot;Email&quot;), &quot;Email&quot;, IF(CONTAINS( Subject , &quot;Cold Call&quot;), &quot;Cold Call&quot;, IF(CONTAINS( Subject , &quot;Call&quot;), &quot;Call&quot;, IF(CONTAINS( Subject , &quot;Meeting&quot;), &quot;Meeting&quot;, IF(CONTAINS( Subject , &quot;On Site Visit&quot;), &quot;Site Visit&quot;, IF(CONTAINS( Subject , &quot;Quote&quot;), &quot;Send Letter/Quote&quot;, &quot;Other&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100, &quot;Key Event/Task Details Captured&quot;,&quot;Missing: &quot;&amp;IF( LEN( Subject ) &lt; 3,&quot;Quality Subject Description, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhoId)=0,&quot;Contact/Lead Reference, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhatId)=0,&quot;Account/Opportunity Reference&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN(  Subject  ) &lt; 3, 0,30) + IF( LEN(  WhoId ) = 0, 0,40) + IF( LEN(  WhatId ) = 0, 0,30)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Producer__c</fullName>
        <label>Producer</label>
        <picklist>
            <picklistValues>
                <fullName>AB Colby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accurez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADM Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Products &amp; Chems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akzo Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arnette</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basf Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASF Corporation UV/EB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bayer Matl Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bayer PU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Butvar Solutia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabot Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabot Corp Pb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canadian Nepheline Corp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cargill Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caschem Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chem Oddities Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ChemTech Specialties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cimbar Cartersville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Composite One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cytec Surface Specialties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dow Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dow Corning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastman Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ei Dupont Denemours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engelhard Corp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Essential Industries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horsehead Industries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huntsman Corp</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>1,4 Butanediol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abex 18S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accelerator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acclaim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alkamide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alkamuls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amicure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ancamide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ancamine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ancarez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anchor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anquamine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anquawhite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arcol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arnox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barimite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barytes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baybond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baydur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bayferrox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bayflex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bayhydrol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bayhydur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baypren</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baytec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beckopox</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SalesManagerAlert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to alert a sales manager to read this call report.  requested by Brian Feldtman 2/13/2006.</description>
        <label>Sales Manager Highlight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Objectives__c</fullName>
        <description>Secondary Objectives and Results for the Task or Event.</description>
        <inlineHelpText>Enter secondary objectives and results for the Task or Event.</inlineHelpText>
        <label>Secondary Objectives</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <label>Task Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserLastModifiedBy__c</fullName>
        <description>Last non-System Admin to modify this Activity. Modifiable by workflow only. Text only - cannot have User lookup on Activity.</description>
        <label>User Last Modified By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserLastModifiedDate__c</fullName>
        <description>Last time a Non-Admin user modified this record.</description>
        <label>User Last Modified Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>